# Projekt_MS_Programowanie2

./: CMakeLists.txt  README.md  budimex.csv
.github/: config.yml
.github/ISSUE_TEMPLATE/: config.yml
Wszystkie_kody/: CSVImporter.cpp  CSVImporter.h  DB.cpp  DB.h  baza1.db  cdprojekt.csv  laczenie_z_sql.cpp  laczenie_z_sql.h  mirbud.csv  mobruk.csv  niemain.cpp  poczotek.cpp  polaczenie_z_api.py  scrap_kurs.py  scrap_kwartal.py  scrapowanie.py  screaper_py.cpp  screaper_py.h  sunex.csv  łączenie_z_sql.cpp  łączenie_z_sql.h
Wszystkie_kody/pliki_csv/: KURS_sunex.csv
